--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-  <h1>Hello world</h1>
-  <p>testing</p>
+  <h1>Super Awesome Website</h1>
+  <p>Hello world</p>
 </body>
 
 </html>
